# HKCLR_BIO

./: .gitattributes  .gitignore  CMakeLists.txt
share/cobottp/translations/: CMakeLists.txt  README.md  cobottp_zh_CN.ts
src/app/: CMakeLists.txt  application.cpp  application.h  copy_if_different.cmake  deployAndroid.bat  main.cpp
src/app/android/: AndroidManifest.xml
src/libs/: CMakeLists.txt
src/libs/InoRobStudio/: .clang-format  .gitignore  CMakeLists.txt  生成VS工程.bat
src/libs/InoRobStudio/Api/: readme.txt
src/libs/InoRobStudio/GlobalDataService/: CMakeLists.txt
src/libs/InoRobStudio/Include/: Calib.h  CalibCe.h  CommonFunction.h  Container.h  Crc32.h  DataConvert.h  DataLog.h  DataService.h  DataServiceManageGlobal.h  DataSrvGlobal.h  DataSubscibeTypes.h  DataTypeDef.h  DetailDef.h  EtherCATXMLQuery.h  Factory.h  FilePathDefine.h  FrameDef.h  FtpClient.h  GlobalDataTypes.h  GlobalParameter.h  GlobalTip.h  Globals.h  IController.h  IDataService.h  IDataSrvBase.h  IDefaultInstructionQueryer.h  IErroQueryer.h  IFactory.h  IGlobalDataManagement.h  IInoRobBusiness.h  IInoRobLog.h  IInoRobUtil.h  IInstructionRangeTable.h  InoInterfaces.h  InoRobBase.h  InoRobBusiness.h  InoRobLog.h  InoRobService.h  InoRobUtil.h  LHBCircleBuffer.hpp  (+22 more)
src/libs/InoRobStudio/InoRobBusiness/: CMakeLists.txt  FactoryDefault.h  VirtualControllerDeviceManager.h  pch.h
src/libs/InoRobStudio/InoRobBusinessProxy/: CMakeLists.txt  FactoryV1.h  pch.h
src/libs/InoRobStudio/InoRobLog/: CMakeLists.txt  InoRobLog.h  InoVersion.h  Log.h  pch.h
src/libs/InoRobStudio/InoRobUdf/: CMakeLists.txt  inorobudf_global.h  pch.h  udf.h  udf_p.h
src/libs/InoRobStudio/InoRobUtil/: CMakeLists.txt  FileHelper.h  NumHelper.h  StringHelper.h  TestHelper.h  pch.h
src/libs/authority/: authority.h  authority_global.h  authoritymanager.h  authoritytr.h  builtinauthoritymanager.h  xmlhandler.h
src/libs/cobotlog/: cobotlog.h  cobotlog_global.h  cobotlogex.h
src/libs/communication/: CMakeLists.txt  communication.cpp  communication.h  communication_global.h  communication_p.h  communicationtr.h  modulesutils.h  templateutils.h
src/libs/communication/interfaceconversionlayer/: backlashcompensationinterface.cpp  backlashcompensationinterface.h  connectioninterface.cpp  connectioninterface.h  controlauthority.cpp  controlauthority.h  controllersystemconfig - 副本.cpp  controllersystemconfig.cpp  controllersystemconfig.h  controllersystemconfig_p.h  crashdetectinterface.cpp  crashdetectinterface.h  datacollectioninterface.cpp  datacollectioninterface.h  datacollectioninterface_p.h  debuginterface.cpp  debuginterface.h  definewarninginterface.cpp  definewarninginterface.h  ethernetcatinterface.cpp  ethernetcatinterface.h  ethernetipinterface.cpp  ethernetipinterface.h  fieldbusinterface.cpp  fieldbusinterface.h  forcecontrolinterface.cpp  forcecontrolinterface.h  frictioncompensationinterface.cpp  frictioncompensationinterface.h  generalmatchinterface.cpp  generalmatchinterface.h  globalvarinterface.cpp  globalvarinterface.h  interferenceareainterface.cpp  interferenceareainterface.h  iointerface.cpp  iointerface.h  jointpointinterface.cpp  jointpointinterface.h  labelinterface.cpp  (+45 more)
src/libs/communication/threadengine/: communicationengine.cpp  communicationengine.h  communicationthread.cpp  communicationthread.h  keyboardthread.cpp  logictreethread.cpp  modelthread.cpp  projectthread.cpp  xmlprocessthread.cpp
src/libs/dialog/: CMakeLists.txt  dialog_global.h  dialogcontainerform.cpp  dialogcontainerform.h  generalcustomwidget.cpp  generalcustomwidget.h  modelessdialogcontainerform.cpp  modelessdialogcontainerform.h  modelessdialogcontainerform.ui
src/libs/dialog/dialogform/: changeauthorityform.cpp  changeauthorityform.h  changeauthorityform.ui  connectcontrollerform.cpp  connectcontrollerform.h  connectcontrollerform.ui  controllerauthorityform.cpp  controllerauthorityform.h  controllerauthorityform.ui  controllerform.cpp  controllerform.h  controllerform.ui  currentauthorityform.cpp  currentauthorityform.h  currentauthorityform.ui  customauthorityform.cpp  customauthorityform.h  customauthorityform.ui  lockscreenform.cpp  lockscreenform.h  lockscreenform.ui  loginform.cpp  processbarformwithcomm.cpp  processbarformwithcomm.h  (+7 more)
src/libs/extensionsystem/: pluginengine_global.h
src/libs/flowwidget/: flowwidget.h  flowwidget.ui  flowwidget_global.h  flowwidgetmanager.h
src/libs/kinematicalgorithm/: kinematicalgorithm.h  kinematicalgorithm_global.h  kinematicalgorithmtype.h
src/libs/osupdate/: OSUpdateToolLib.h  SSHCmd.h  UpdateCommon.h  osupdate_global.h
src/libs/pluginengine/: CMakeLists.txt  invoker.cpp  invoker.h  iplugin.cpp  iplugin.h  iplugin_p.h  optionsparser.cpp  optionsparser.h  plugincollection.cpp  plugincollection.h  plugindetailsview.cpp  plugindetailsview.h  plugindetailsview.ui  plugindialog.cpp  plugindialog.h  pluginerroroverview.cpp  pluginerroroverview.h  pluginerroroverview.ui  pluginerrorview.cpp  pluginerrorview.h  pluginerrorview.ui  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginspec.cpp  pluginspec.h  pluginspec_p.h  pluginview.cpp  pluginview.h  pluginview.qrc
src/libs/simulator/: simandteachform.h  simandteachform.ui  simcontainerform.h  simcontainerform.ui  simmodelwidget.h  simulator_global.h
src/libs/teachcontroller/: CMakeLists.txt  coorddisplayform.cpp  coorddisplayform.h  coorddisplayform.ui  coordselectform.cpp  coordselectform.h  coordselectform.ui  stepmodeform.cpp  stepmodeform.h  stepmodeform.ui  teachcontrolform.cpp  teachcontrolform.h  teachcontrolform.ui  teachcontroller_global.h
src/libs/virtualkeyboard/: CMakeLists.txt  ReadMe.md  lineeditnofocus.h  promptcompletiontablemodel.h  texteditoperation.h  virtualkeyboard.h  virtualkeyboard_global.h  virtualkeyboardresource.qrc  vkim.json
src/plugins/: CMakeLists.txt
src/plugins/coreplugin/: CMakeLists.txt  Core.json.in  coreplugin.cpp  coreplugin.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  movelabel.cpp  movelabel.h  passwordconfirmform.cpp  passwordconfirmform.h  passwordconfirmform.ui
(+858 files in other folders)
